--- a/style.css
+++ b/style.css
@@ -103,6 +103,7 @@ input:focus {
   display: -ms-flexbox;
   display: flex;
   line-height: 1.2;
+  font-size: 21.6px;
 }
 @media only screen and (max-width: 480px) {
   .login__area p {
@@ -128,6 +129,11 @@ input:focus {
     margin-bottom: 0px;
   }
 }
+@media only screen and (max-width: 480px) {
+  .login__top p {
+    font-size: 15.6px;
+  }
+}
 .login--logo img {
   max-width: 150px;
   margin-bottom: 10px;
@@ -146,7 +152,7 @@ input:focus {
   .login--logo img {
     max-width: 80px;
     margin-bottom: 0px;
-    margin-right: 5px;
+    margin: 0 5px;
   }
 }
 .login--logo p {
@@ -176,6 +182,19 @@ input:focus {
   -webkit-box-flex: 2;
       -ms-flex: 2;
           flex: 2;
+}
+.login__box p {
+  margin-bottom: 10px;
+}
+@media only screen and (max-width: 480px) {
+  .login__box p {
+    font-size: 18px;
+  }
+}
+@media only screen and (max-width: 1280px) {
+  .login__box {
+    padding: 0 5%;
+  }
 }
 @media only screen and (max-width: 375px) {
   .login__box {
@@ -317,7 +336,7 @@ input:focus {
     line-height: 1;
   }
 }
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 375px) {
   .login--point {
     font-size: 24px;
     margin-bottom: 5px;
@@ -331,7 +350,7 @@ input:focus {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 375px) {
   .login--point2 {
     font-size: 24px;
     margin-bottom: 5px;
