--- a/style.css
+++ b/style.css
@@ -122,6 +122,10 @@ input:focus {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
 }
 @media only screen and (max-width: 767px) {
@@ -135,24 +139,18 @@ input:focus {
   }
 }
 .login--logo img {
-  max-width: 150px;
   margin-bottom: 10px;
-}
-@media only screen and (max-width: 1024px) {
-  .login--logo img {
-    max-width: 120px;
-  }
 }
 @media only screen and (max-width: 767px) {
   .login--logo img {
+    max-width: 250px;
     margin-bottom: 0px;
   }
 }
 @media only screen and (max-width: 480px) {
   .login--logo img {
-    max-width: 80px;
+    max-width: 200px;
     margin-bottom: 0px;
-    margin: 0 5px;
   }
 }
 .login--logo p {
