--- a/style.css
+++ b/style.css
@@ -44,20 +44,31 @@ input:focus {
 
 .login--Bg {
   height: 100vh;
-  display: block;
-  overflow: hidden;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  overflow: auto;
   width: 100%;
   background-size: cover;
   background-position: center bottom;
   background-image: url("images/loginbg.png");
+  -ms-flex-line-pack: stretch;
+      align-content: stretch;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 @media only screen and (max-width: 767px) {
   .login--Bg {
     background-image: url("images/loginbg_mobile.png");
   }
 }
+.login--Bg::-webkit-scrollbar {
+  width: 0px;
+}
 .login__area {
-  height: 100vh;
+  -webkit-box-flex: 3;
+      -ms-flex: 3;
+          flex: 3;
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -67,15 +78,16 @@ input:focus {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  background: linear-gradient(50deg, rgba(252, 182, 44, 0.61) 19%, #9f3b31 64%);
   position: relative;
-  -webkit-transform: skewX(5deg);
-          transform: skewX(5deg);
-  -webkit-box-shadow: -5px -5px 30px #400d0c;
-          box-shadow: -5px -5px 30px #400d0c;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   text-align: center;
-  -ms-flex-line-pack: stretch;
-      align-content: stretch;
+}
+@media only screen and (max-width: 1024px) {
+  .login__area {
+    padding: 30px 0 0;
+  }
 }
 @media only screen and (max-width: 480px) {
   .login__area {
@@ -153,6 +165,11 @@ input:focus {
     margin-bottom: 0px;
   }
 }
+@media only screen and (max-width: 320px) {
+  .login--logo img {
+    max-width: 150px;
+  }
+}
 .login--logo p {
   margin-bottom: 0px;
   color: #fff;
@@ -169,7 +186,7 @@ input:focus {
   }
 }
 .login__box {
-  padding: 0px 10%;
+  padding: 0px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -177,9 +194,9 @@ input:focus {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-flex: 2;
-      -ms-flex: 2;
-          flex: 2;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 .login__box p {
   margin-bottom: 10px;
@@ -187,11 +204,6 @@ input:focus {
 @media only screen and (max-width: 480px) {
   .login__box p {
     font-size: 18px;
-  }
-}
-@media only screen and (max-width: 1280px) {
-  .login__box {
-    padding: 0 5%;
   }
 }
 @media only screen and (max-width: 375px) {
@@ -204,10 +216,18 @@ input:focus {
   display: -ms-flexbox;
   display: flex;
   margin-bottom: 10px;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  width: 430px;
 }
 @media only screen and (max-width: 480px) {
   .login__box .nav-pills {
     margin-bottom: 5px;
+  }
+}
+@media only screen and (max-width: 414px) {
+  .login__box .nav-pills {
+    width: 300px;
   }
 }
 .login__box .nav-pills li {
@@ -219,16 +239,31 @@ input:focus {
   width: 100%;
 }
 .login__box .nav-pills li button.nav-link {
-  border-top: 5px solid #bd5549;
-  border-bottom: 5px solid #c85242;
-  border-right: 5px solid #903027;
-  border-left: 5px solid #c04a3e;
   border-radius: 0px;
   color: #fff;
   text-transform: uppercase;
   font-weight: bold;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
-  background: linear-gradient(50deg, #ec6856 19%, #a53d2f 64%);
+  height: 60px;
+  width: 215px;
+  background-color: transparent;
+  background-position: center;
+  background-size: cover;
+  background-image: url("../images/green_s_btn.png");
+}
+@media only screen and (max-width: 414px) {
+  .login__box .nav-pills li button.nav-link {
+    height: 35px;
+    width: 150px;
+  }
+}
+.login__box .nav-pills li button.nav-link img {
+  max-height: 40px;
+}
+@media only screen and (max-width: 414px) {
+  .login__box .nav-pills li button.nav-link img {
+    max-height: 25px;
+  }
 }
 @media only screen and (max-width: 480px) {
   .login__box .nav-pills li button.nav-link {
@@ -236,23 +271,26 @@ input:focus {
   }
 }
 .login__box .nav-pills li button.nav-link.active {
-  background: linear-gradient(50deg, #eadb4f 19%, #f0a336 64%);
-  border-top: 5px solid #eadb4f;
-  border-bottom: 5px solid #d3943c;
-  border-right: 5px solid #d08924;
-  border-left: 5px solid #fff077;
-  color: #242424;
+  background-color: transparent;
+  background-position: center;
+  background-size: cover;
+  background-image: url("../images/red_s_btn.png");
+}
+.login__form {
+  margin-bottom: 10px;
 }
 @media only screen and (max-width: 480px) {
   .login__form {
-    margin-bottom: 5px;
+    margin-bottom: 0px;
   }
 }
 .login__form li input {
-  background-color: rgba(253, 239, 106, 0.62);
+  height: 42px;
   border: 0px;
-  border-bottom: 5px solid #cb9903;
-  border-right: 5px solid #efc269;
+  width: 420px;
+  background-size: cover;
+  background-color: transparent;
+  background-image: url("../images/input_bg.png");
   margin: 5px 0;
   color: #242424;
   font-weight: bold;
@@ -261,6 +299,19 @@ input:focus {
   .login__form li input {
     padding: 3px 15px;
     margin: 3px;
+  }
+}
+@media only screen and (max-width: 414px) {
+  .login__form li input {
+    height: 35px;
+    width: 360px;
+  }
+}
+@media only screen and (max-width: 414px) {
+  .login__form li input {
+    height: 40px;
+    width: 300px;
+    background-image: url("../images/input_bg_s.png");
   }
 }
 .login__form li input::-webkit-input-placeholder {
@@ -284,13 +335,12 @@ input:focus {
   font-weight: bold;
 }
 .login--btn {
-  width: 100%;
+  width: 420px;
   padding: 10px 20px;
-  border: 3px solid #bd5549;
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(3%, #ffcbc4), color-stop(50%, #a53d2f));
-  box-shadow: 0px 7px 2px -5px #562216, inset 0px 0px 3px #562216;
-  -webkit-box-shadow: 0px 7px 2px -5px #562216, inset 0px 0px 3px #562216;
-  -moz-box-shadow: 0px 7px 2px -5px #562216, inset 0px 0px 3px #562216;
+  height: 70px;
+  background-size: cover;
+  background-color: transparent;
+  background-image: url("../images/green_b_btn.png");
   border-radius: 0px;
   text-shadow: #562216 2px 2px 2px;
   color: #fff;
@@ -305,39 +355,95 @@ input:focus {
   -o-transition: 0.2s;
   cursor: pointer;
 }
+@media only screen and (max-width: 414px) {
+  .login--btn {
+    width: 300px;
+    height: 50px;
+  }
+}
+.login--btn img {
+  max-height: 45px;
+}
+@media only screen and (max-width: 414px) {
+  .login--btn img {
+    max-height: 30px;
+  }
+}
 @media only screen and (max-width: 480px) {
   .login--btn {
     padding: 5px;
     font-size: 18px;
+    margin-bottom: 0px;
   }
 }
 .login--btn:focus, .login--btn:active {
-  border: 3px solid #bd5549;
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(3%, #ffcbc4), color-stop(50%, #8b2113));
-  box-shadow: 0px 7px 2px -5px #562216, inset 0px 0px 3px #562216;
-  -webkit-box-shadow: 0px 7px 2px -5px #562216, inset 0px 0px 3px #562216;
-  -moz-box-shadow: 0px 7px 2px -5px #562216, inset 0px 0px 3px #562216;
+  background-size: cover;
+  background-color: transparent;
+  background-image: url("../images/red_b_btn.png");
   border-radius: 0px;
-  text-shadow: #562216 2px 2px 2px;
   margin-top: 5px;
+  outline: none;
 }
-.login--point {
-  font-size: 33.6px;
-  font-weight: bold;
-  background: -webkit-gradient(linear, left top, left bottom, from(#fceabb), color-stop(50%, #fccd4d), color-stop(51%, #f8b500), to(#fbdf93));
-  background: linear-gradient(to bottom, #fceabb 0%, #fccd4d 50%, #f8b500 51%, #fbdf93 100%);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+.login__text {
+  padding: 0 10%;
 }
-@media only screen and (max-width: 767px) {
-  .login--point {
-    line-height: 1;
+@media only screen and (max-width: 480px) {
+  .login__text {
+    margin-bottom: 5px;
   }
 }
-@media only screen and (max-width: 375px) {
-  .login--point {
-    font-size: 24px;
-    margin-bottom: 5px;
+.login__text img {
+  max-width: 420px;
+  margin-bottom: 5px;
+}
+@media only screen and (max-width: 414px) {
+  .login__text img {
+    max-width: 360px;
+    margin-bottom: 0px;
+  }
+}
+@media only screen and (max-width: 414px) {
+  .login__text img {
+    max-width: 300px;
+  }
+}
+@media only screen and (max-width: 1024px) {
+  .login__text2 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .login__text2 img {
+    max-width: 100%;
+  }
+}
+@media only screen and (max-width: 414px) {
+  .login__text2 {
+    padding: 0 5%;
+  }
+}
+.login--point {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.login--point img {
+  max-height: 45px;
+}
+@media only screen and (max-width: 414px) {
+  .login--point img {
+    max-height: 30px;
   }
 }
 .login--point2 {
@@ -354,14 +460,22 @@ input:focus {
     margin-bottom: 5px;
   }
 }
+@media only screen and (max-width: 375px) {
+  .login--point2 img {
+    max-height: 35px;
+  }
+}
 .login--socer {
   display: none;
 }
 @media only screen and (max-width: 767px) {
   .login--socer {
-    display: block;
-    margin-top: -10px;
-    margin-left: -20px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
   }
 }
 .login--socer img {
