--- a/style.scss
+++ b/style.scss
@@ -218,7 +218,7 @@ input{
             background-color:transparent;
             background-position: center;
             background-size:cover;
-            background-image: url('../images/green_s_btn.png');
+            background-image: url('images/green_s_btn.png');
             
             @include rwdw(414){
               height:35px;
@@ -241,7 +241,7 @@ input{
             background-color:transparent;
             background-position: center;
             background-size:cover;
-            background-image: url('../images/red_s_btn.png');
+            background-image: url('images/red_s_btn.png');
               // background: linear-gradient(50deg, #eadb4f 19%, #f0a336 64%);
               // border-top:5px solid #eadb4f;
               // border-bottom:5px solid #d3943c;
@@ -270,7 +270,7 @@ input{
         width: 420px;
         background-size: cover;
         background-color: transparent;
-        background-image:url('../images/input_bg.png');
+        background-image:url('images/input_bg.png');
         margin:5px 0;
         color:$black;
         font-weight: bold;
@@ -285,7 +285,7 @@ input{
         @include rwdw(414){
           height:40px;
           width: 300px;
-          background-image:url('../images/input_bg_s.png');
+          background-image:url('images/input_bg_s.png');
         }
         &::placeholder{
           color:$black;
@@ -302,7 +302,7 @@ input{
     height:70px;
     background-size:cover;
     background-color:transparent;
-    background-image: url('../images/green_b_btn.png');
+    background-image: url('images/green_b_btn.png');
     // background-color: #FF0000;
     // box-shadow: 0px 7px 2px -5px #562216, inset 0px 0px 3px #562216;
     // -webkit-box-shadow: 0px 7px 2px -5px #562216, inset 0px 0px 3px #562216;
@@ -342,7 +342,7 @@ input{
       // background:-webkit-gradient(linear, left top, left bottom, color-stop(3%, #ffcbc4), color-stop(50%, #8b2113));;
       background-size:cover;
       background-color:transparent;
-      background-image: url('../images/red_b_btn.png');
+      background-image: url('images/red_b_btn.png');
       // background-color: #FF0000;
      
       border-radius: 0px;
