--- a/style.scss
+++ b/style.scss
@@ -67,7 +67,10 @@ input{
       background-image: url('images/loginbg.png');
       align-content: stretch;
       flex-wrap: wrap;
-      @include rwdw(767){
+      @include rwdw(1024){
+        background-position: 15% bottom;
+      }
+      @include rwdw(991){
         background-image: url('images/loginbg_mobile.png');
       }
       &::-webkit-scrollbar{
@@ -352,34 +355,84 @@ input{
     }
   }
   &__text{
-    padding:0 10%;
-    @include rwdw(480){
-      margin-bottom: 5px;
+    // padding:0 10%;
+    position: absolute;
+    margin-top:3%;
+    margin-left:8%;
+    @include rwdw(1199){
+      margin-left:3%;
+      // margin-bottom: 5px;
     }
+    @include rwdw(1366){
+      margin-top:10%;
+      margin-left:3%;
+      // margin-bottom: 5px;
+    }
+   
     img{
       max-width: 420px;
-      margin-bottom: 5px;
-      @include rwdw(414){
-        max-width: 360px;
-        margin-bottom: 0px;
+      width: 100%;
+      margin: 5px 0;
+      @include rwdw(1024){
+        max-width: 380px;
       }
-      @include rwdw(414){
-        max-width: 300px;
+      // @include rwdw(414){
+      //   max-width: 360px;
+      //   margin-bottom: 0px;
+      // }
+      // @include rwdw(414){
+      //   max-width: 300px;
         
-      }
+      // }
     }
   }
   &__text2{
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-end;
+    position: absolute;
+    margin-left: 20%;
+    bottom: 10%;
+    @include rwdw(1366){
+
+    }
     @include rwdw(1024){
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      img{
-        max-width: 100%;
-      }
+      margin-left: 15%;
     }
-    @include rwdw(414){
+    @include rwdw(991){
+      flex-wrap: nowrap;
+      align-items: center;
+      margin-left: 0px;
+      padding:0 10px;
+      bottom:0px;
+      position: relative;
+      width: 100%;
+  
+    }
+    @include rwdw(480){
       padding:0 5%;
+      flex-wrap: wrap;
+    }
+    img{
+      max-width: 450px;
+      @include rwdw(1366){
+        max-width: 450px;
+      }
+      @include rwdw(1024){
+        max-width: 380px;
+      }
+      @include rwdw(991){
+        padding:0 5px;
+        max-width: 50%;
+      }
+      @include rwdw(480){
+        max-width: 240px;
+        margin-bottom: 10px;
+        width:100%;
+      }
     }
   }
   &--point{
@@ -412,11 +465,11 @@ input{
   }
   &--socer{
     display: none;
-    @include rwdw(767){
+    @include rwdw(991){
       display: flex;
 
       align-items: flex-end;
-
+    
     }
     img{
       width: 100%;
